# trimui-spotify

./: .gitignore  README.md  pak.json
docs/plans/: 2026-03-30-favorites-overlay-copy-design.md  2026-03-30-playback-footer-copy-design.md  2026-03-31-favlist-navigation-design.md  2026-03-31-favlist-navigation.md  2026-03-31-ffmpeg-lite-design.md  2026-03-31-ffmpeg-lite.md  2026-03-31-runtime-logging-design.md  2026-03-31-runtime-logging.md  2026-03-31-spotify-takeover-local-playback-design.md  2026-03-31-spotify-takeover-local-playback.md
package/SideB.pak/: launch.sh
package/SideB.pak/data/: config.yml
packaging/crossmix/: config.json  launch.sh
packaging/nextui/: launch.sh
packaging/shared/LICENSES/: NOTICE.md  THIRD_PARTY_SOURCES.md
packaging/stock/: launch.sh
scripts/: package.sh
spotify-ui-rs/: Cargo.toml
spotify-ui-rs/examples/: test_download.rs
spotify-ui-rs/src/: app.rs  battery.rs  constants.rs  display.rs  download.rs  drawing.rs  favorites.rs  font.rs  image_ops.rs  input.rs  local_import.rs  local_player.rs  log_utils.rs  main.rs  mode.rs  network.rs  paths.rs  playlist_view.rs  power.rs  render.rs  resources.rs
