[package]
name = "sideb"
version = "1.0.5"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
png = "0.17"
jpeg-decoder = "0.3"
ab_glyph = "0.2"
ureq = { version = "3", default-features = false }
tungstenite = { version = "0.26", features = ["handshake"] }
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
